src/objects/Calabrio_Integration_Setting__c.object
<CustomObject>
    <description>Custom metadata consumed by the Calabrio Integration Batch processess</description>
    <fields>
        <fullName>API_AuthenticationEndpoint__c</fullName>
        <description>for use by API call to Calabrio cloud</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>for use by API call to Calabrio cloud</inlineHelpText>
        <label>API_AuthenticationEndpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>API_AuthenticationPassword__c</fullName>
        <description>for Calabrio Integration auth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API_AuthenticationPassword</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_AuthenticationUserID__c</fullName>
        <description>for Calabrio Integration use</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API_AuthenticationUserID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <description>used for Calabrio Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API_Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Chat_Queue_ID__c</fullName>
        <description>used by Calabrio integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Chat_Queue_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Queue_ID__c</fullName>
        <description>for Calabrio integration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>10 char</inlineHelpText>
        <label>Email_Queue_ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_Queue_ID__c</fullName>
        <description>for Calabrio Integration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>10 char</inlineHelpText>
        <label>SMS_Queue_ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Calabrio Integration Setting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Calabrio Integration Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calabrio Integration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>